--- a/pom.xml
+++ b/pom.xml
@@ -31,10 +31,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-aop</artifactId>
-		</dependency>
+                <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-aop</artifactId>
+                </dependency>
 
                 <dependency>
                     <groupId>org.springframework.boot</groupId>
@@ -45,7 +49,16 @@
                     <groupId>org.webjars</groupId>
                     <artifactId>webjars-locator</artifactId>
                 </dependency>
-
+                <dependency>
+                    <groupId>org.webjars</groupId>
+                    <artifactId>sockjs-client</artifactId>
+                    <version>1.0.2</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.webjars</groupId>
+                    <artifactId>stomp-websocket</artifactId>
+                    <version>2.3.3</version>
+                </dependency>  
                 <dependency>
                     <groupId>org.webjars</groupId>
                     <artifactId>bootstrap</artifactId>
@@ -60,9 +73,9 @@
 
         </dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
+        <build>
+            <plugins>
+                <plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
