--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,11 @@
                     <groupId>org.webjars</groupId>
                     <artifactId>jquery</artifactId>
                     <version>3.1.0</version>
-                </dependency>                
+                </dependency> 
+		<dependency>
+       			<groupId>org.springframework.boot</groupId>
+        		<artifactId>spring-boot-starter-data-redis</artifactId>
+   		</dependency>
 
         </dependencies>
 
